# skyfi-modelship

./: .flake8  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
example/: Dockerfile  README.md  main.py  main_georef.py  pyproject.toml
example/tests/: conftest.py  test_exec.py
skyfi_modelship/: __init__.py  config.py  skyfi_app.py  skyfi_types.py
skyfi_modelship/handler/: args_handler.py  fastapi_handler.py  rabbitmq_handler.py
skyfi_modelship/util/: execution.py  inference_request.py  model_transformer.py  storage.py
tests/: conftest.py  test_app.py  test_app_optional_params.py  test_file_io.py  test_required_params.py
