[tool.poetry]
name = "skyfi-modelship"
version = "1.0.0"
description = "SkyFi ModelShip - **SkyFi Insights** partners integration library."
license = "MIT"
authors = ["Atanas Balevski <nasko@skyfi.com>"]
readme = "README.md"
packages = [{include = "skyfi_modelship"}]


[tool.poetry.dependencies]
python = "~3.9"
python-dotenv = "^1.0.0"
pydantic = "^1.10.6"
loguru = "^0.6.0"
fastapi = "^0.95.1"
uvicorn = {extras = ["standard"], version = "^0.22.0"}
pika = "^1.3.2"
orjson = "^3.9.1"
shapely = "^2.0.1"
google-cloud-storage = "^2.10.0"
geojson = "^3.0.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
flake8 = "^6.0.0"
mypy = "^0.991"
black = "^22.10.0"
