[tool.poetry]
name = "skyfi-modelship"
version = "0.0.0"
description = "SkyFi ModelShip - The Insights partners integration library."
license = "MIT"
authors = ["Atanas Balevski <nasko@skyfi.com>"]
readme = "README.md"
packages = [{include = "skyfi_modelship"}]


[tool.poetry.dependencies]
python = ">=3.9,<3.12"
python-dotenv = "^1.0.0"
pydantic = "^2.4.2"
loguru = "^0.7.2"
fastapi = "^0.103.2"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
pika = "^1.3.2"
orjson = "^3.9.15"
shapely = "^2.0.1"
google-cloud-storage = "^2.11.0"
geojson-pydantic = "^1.0.1"
pydantic-settings = "^2.0.3"
simple-parsing = "^0.1.4"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
flake8 = "^6.1.0"
mypy = "^1.5.1"
black = "^23.9.1"

[tool.poetry-dynamic-versioning]
enable = true

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"
