[tool.poetry]
name = "skyfi-modelship"
version = "0.0.0"
description = "SkyFi ModelShip - The Insights partners integration library."
license = "MIT"
authors = ["Atanas Balevski <nasko@skyfi.com>"]
readme = "README.md"
packages = [{include = "skyfi_modelship"}]


[tool.poetry.dependencies]
python = ">=3.10,<3.12"
python-dotenv = "^1.0.1"
pydantic = "^2.6.3"
loguru = "^0.7.2"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.27.1"}
pika = "^1.3.2"
orjson = "^3.9.15"
shapely = "^2.0.3"
skyfi-cloud = {version = "^0.1.4", source = "skyfi-python"}
geojson-pydantic = "^1.0.2"
pydantic-settings = "^2.2.1"
simple-parsing = "^0.1.5"
pytest-mock = "^3.14.0"


[[tool.poetry.source]]
name = "skyfi-python"
url = "https://us-central1-python.pkg.dev/skyfi-336416/skyfi-python/simple/"
priority = "supplemental"


[[tool.poetry.source]]
name = "PyPI"
priority = "primary"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
flake8 = "^6.1.0"
mypy = "^1.5.1"
black = "^23.9.1"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.poetry-dynamic-versioning]
enable = true

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"
