[tool.poetry]
name = "skyfi-modelship-example"
version = "1.0.0"
description = "SkyFi Insights Partners example integration"
license = "MIT"
authors = ["Atanas Balevski <nasko@skyfi.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "~3.9"
skyfi-modelship = "^0.1.0"
# for colour correction
rasterio = "^1.3.8"
rio-color = "^1.0.4"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
flake8 = "^6.0.0"
mypy = "^0.991"
black = "^22.10.0"
