[tool.poetry]
name = "skyfi-modelship-example"
version = "1.0.0"
description = "SkyFi Insights Partners example integration"
license = "MIT"
authors = ["Atanas Balevski <nasko@skyfi.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "~3.9"
skyfi-modelship = { path = "../", develop = false }
# for colour correction
rasterio = "^1.3.8"
rio-color = "^1.0.4"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
flake8 = "^6.1.0"
mypy = "^1.5.1"
black = "^23.9.1"
